--- a/styles.css
+++ b/styles.css
@@ -8,25 +8,25 @@ body {
 }
 
 a:link {
-  color: #660033;
+  color: #AA1111;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: #660033;
+  color: #AA1111;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: #660033;
+  color: #AA1111;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: #660033;
+  color: #AA1111;
   background-color: transparent;
   text-decoration: underline;
 }
