--- a/mlmobileuurka/styles.css
+++ b/mlmobileuurka/styles.css
@@ -8,25 +8,25 @@ body {
 }
 
 a:link {
-  color: #FF994E;
+  color: #FF6A00;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: #FF994E;
+  color: #FF6A00;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: #FF994E;
+  color: #FF6A00;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: #FF994E;
+  color: #FF6A00;
   background-color: transparent;
   text-decoration: underline;
 }
