--- a/mltelecom/styles.css
+++ b/mltelecom/styles.css
@@ -1,7 +1,8 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
-  max-width: 960px;
+  max-width: 1360px;
+  /* max-width: 960px; */
   margin: auto;
   color: #ffffff;
   background-color: #333333;
