--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   max-width: 75%;
   margin: auto;
   color: #FFFFFF;
-  background-color: #003566;
+  background-color: #001D3D;
 }
 
 a:link {
