--- a/mlsupplychain/styles.css
+++ b/mlsupplychain/styles.css
@@ -8,25 +8,25 @@ body {
 }
 
 a:link {
-  color: #218380;
+  color: #73D2DE;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: #218380;
+  color: #73D2DE;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: #218380;
+  color: #73D2DE;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: #218380;
+  color: #73D2DE;
   background-color: transparent;
   text-decoration: underline;
 }
