--- a/mlsupplychain/styles.css
+++ b/mlsupplychain/styles.css
@@ -4,7 +4,7 @@ body {
   max-width: 75%;
   margin: auto;
   color: #FFFFFF;
-  background-color: #001219;
+  background-color: #0D0F12;
 }
 
 a:link {
