--- a/mltelecom/styles.css
+++ b/mltelecom/styles.css
@@ -8,25 +8,25 @@ body {
 }
 
 a:link {
-  color: #EE9B00;
+  color: #0A9396;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: #EE9B00;
+  color: #0A9396;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: #EE9B00;
+  color: #0A9396;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: #EE9B00;
+  color: #0A9396;
   background-color: transparent;
   text-decoration: underline;
 }
