--- a/mlsupplychain/styles.css
+++ b/mlsupplychain/styles.css
@@ -8,25 +8,25 @@ body {
 }
 
 a:link {
-  color: #8ECAE6;
+  color: #219EBC;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: #8ECAE6;
+  color: #219EBC;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: #8ECAE6;
+  color: #219EBC;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: #8ECAE6;
+  color: #219EBC;
   background-color: transparent;
   text-decoration: underline;
 }
