--- a/styles.css
+++ b/styles.css
@@ -3,30 +3,30 @@ body {
   font-size: 12px;
   max-width: 75%;
   margin: auto;
-  color: #FCFAF9;
-  background-color: #333333;
+  color: #EFF1F3;
+  background-color: #272727;
 }
 
 a:link {
-  color: #48E5C2;
+  color: #009FB7;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: #48E5C2;
+  color: #009FB7;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: #48E5C2;
+  color: #009FB7;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: #48E5C2;
+  color: #009FB7;
   background-color: transparent;
   text-decoration: underline;
 }
