--- a/styles.css
+++ b/styles.css
@@ -8,25 +8,25 @@ body {
 }
 
 a:link {
-  color: #8a14ab;
+  color: #E66C37;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: #8a14ab;
+  color: #E66C37;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: #8a14ab;
+  color: #E66C37;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: #8a14ab;
+  color: #E66C37;
   background-color: transparent;
   text-decoration: underline;
 }
