--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
   font-size: 12px;
   max-width: 88%;
   margin: auto;
-  color: #000000;
-  background-color: #FFFFFF;
+  background-color: #000000;
+  color: #FFFFFF;
 }
 
 a:link {
