--- a/mlcoffeeplantdiseases/styles.css
+++ b/mlcoffeeplantdiseases/styles.css
@@ -58,6 +58,32 @@ header {
     margin: auto 2em;
 }
 
+footer {
+    text-align: center;
+    margin: auto 2em;
+}
+
+footer .social {
+    margin: 24px 0;
+    padding: 0;
+    font-size: 30px;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+}
+
+footer .social li {
+    display: inline-block;
+    margin: 0 15px;
+    padding: 0;
+}
+
+footer .social li a {
+    color: #fff;
+}
+
+footer .social li a:hover {
+    color: #FFFFFF;
+}
+
 section {
     margin: auto 1em 4em 2em;
 }
