--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
-  max-width: 88%;
+  max-width: 80%;
   margin: auto;
   color: #FFFFFF;
-  background-color: #000000;
+  background-color: #18161F;
 }
 
 a:link {
@@ -45,7 +45,7 @@ h2 {
 
 main {
   display: grid;
-  margin-top: 3em;
+  margin-top: 1.5em;
 }
 
 header {
@@ -80,7 +80,11 @@ footer .social li a:hover {
 }
 
 section {
-  margin: auto 1em 2em 2em;
+  margin: auto 3em 3em 3em;
+  background-color: #22212B;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
 }
 
 i {
