--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
   max-width: 80%;
-  margin: auto;
+  margin: auto 15em;
   color: #FFFFFF;
   background-color: #18161F;
 }
