--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
-  max-width: 80%;
-  margin: auto 15em;
+  max-width: 85%;
+  margin: auto;
   color: #FFFFFF;
   background-color: #18161F;
 }
