--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   max-width: 88%;
   margin: auto;
   color: #FFFFFF;
-  background-color: #18161F;
+  background-color: #131314;
 }
 
 a:link {
