--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,10 @@ section {
   margin: auto;
   width: 90%;
   background-color: #161B22;
-  border-radius: 10px;
-  padding: 20px;
+  border-radius: 24px;
+  padding: 32px;
   margin-bottom: 20px;
+  border: 1px solid rgba(255, 255, 255, .08);
 }
 
 i {
@@ -93,7 +94,10 @@ i {
 }
 
 p {
-  margin: .2em auto
+  margin: .2em auto;
+  margin-bottom: 10px;
+  color: #a7a7a7;
+
 }
 
 hr {
