--- a/styles.css
+++ b/styles.css
@@ -4234,8 +4234,6 @@ span.fr-img-caption.fr-view.fr-dii.fr-fir {
     }
 }
 
-/*end-commonstyles library*/
-/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
@@ -4243,7 +4241,12 @@ html {
 }
 
 body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+    max-width: 88%;
     margin: 0;
+    color: #FFFFFF;
+    background-color: #0D1117;
 }
 
 article,
@@ -4460,20 +4463,6 @@ ol {
     padding-left: 20px;
 }
 
-/* Fade effect */
-/* Over effect */
-/* Slide effect */
-/* Over and Slide effect */
-/* Flip Left effect */
-/* Flip Right effect */
-/* Flip Top effect */
-/* Flip Bottom effect */
-/* Wobble Left effect */
-/* Wobble Right effect */
-/* Wobble top effect */
-/* Wobble bottom effect */
-/* Zoom and Rotate Effects */
-/* Utility */
 .u-over-slide {
     position: absolute;
     left: 0;
