--- a/mlgpt2/styles.css
+++ b/mlgpt2/styles.css
@@ -4,33 +4,29 @@ body {
     max-width: 88%;
     margin: auto;
     color: #FFFFFF;
-    background-color: #171314;
-    background-image: url('/mlcovid/bg.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
+    background-color: #0D1117;
 }
 
 a:link {
-    color: #AA5EFF;
+    color: #EE6009;
     background-color: transparent;
     text-decoration: none;
 }
 
 a:visited {
-    color: #AA5EFF;
+    color: #EE6009;
     background-color: transparent;
     text-decoration: none;
 }
 
 a:hover {
-    color: #AA5EFF;
+    color: #EE6009;
     background-color: transparent;
     text-decoration: underline;
 }
 
 a:active {
-    color: #AA5EFF;
+    color: #EE6009;
     background-color: transparent;
     text-decoration: underline;
 }
@@ -48,9 +44,8 @@ h2 {
 }
 
 main {
-    display: grid;
-    grid-template-columns: 25% 75%;
-    margin-top: 3em;
+    place-items: center;
+    margin-top: 1.5em;
 }
 
 header {
@@ -85,7 +80,13 @@ footer .social li a:hover {
 }
 
 section {
-    margin: auto 1em 2em 2em;
+    margin: auto;
+    width: 90%;
+    background-color: #161B22;
+    border-radius: 24px;
+    padding: 32px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(255, 255, 255, .08);
 }
 
 i {
@@ -93,7 +94,10 @@ i {
 }
 
 p {
-    margin: .2em auto
+    margin: .2em auto;
+    margin-bottom: 10px;
+    color: #a7a7a7;
+
 }
 
 hr {
@@ -116,8 +120,4 @@ input {
 select {
     text-align: left;
     width: 20%;
-}
-
-#mainLeft {
-    border-right: 1px solid lightgray;
 }
