--- a/mlgpt2/styles.css
+++ b/mlgpt2/styles.css
@@ -121,3 +121,51 @@ select {
     text-align: left;
     width: 20%;
 }
+
+/* styles.css */
+/* Add styles for the chat window */
+.chat-window {
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow-y: scroll;
+    padding: 10px;
+}
+
+.chat-window::-webkit-scrollbar {
+    width: 6px;
+}
+
+.chat-window::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+}
+
+/* Add styles for the chat input */
+.chat-input {
+    display: flex;
+    margin-top: 10px;
+}
+
+.chat-input input[type="text"] {
+    flex-grow: 1;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+}
+
+.chat-input button {
+    margin-left: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #AA5EFF;
+    color: white;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.chat-input button:hover {
+    background-color: #9C3DF0;
+}
