--- a/mlgpt2/styles.css
+++ b/mlgpt2/styles.css
@@ -1,46 +1,67 @@
+/* Global Styles */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
-    max-width: 88%;
-    margin: auto;
     color: #FFFFFF;
     background-color: #0D0F12;
+    max-width: 88%;
+    margin: auto;
 }
 
-a:link {
-    color: #8ECAE6;
-    background-color: transparent;
-    text-decoration: none;
-}
-
-a:visited {
-    color: #8ECAE6;
-    background-color: transparent;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #8ECAE6;
-    background-color: transparent;
-    text-decoration: underline;
-}
-
+a:link,
+a:visited,
+a:hover,
 a:active {
     color: #8ECAE6;
-    background-color: transparent;
+    text-decoration: none;
+}
+
+a:hover,
+a:active {
     text-decoration: underline;
+}
+
+h1,
+h2 {
+    margin-bottom: 0;
 }
 
 h1 {
     font-size: 3em;
     letter-spacing: .6em;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding: 1em 0;
 }
 
 h2 {
     font-size: 1.5em;
     padding-bottom: 1em;
+}
+
+hr {
+    border: none;
+    background-color: lightgray;
+    height: 1px;
+}
+
+p {
+    margin: .2em auto;
+}
+
+i {
+    margin-right: .5em;
+}
+
+input,
+select {
+    text-align: left;
+    width: 20%;
+}
+
+/* Layout Styles */
+header,
+footer {
+    text-align: center;
+    margin: auto 2em;
 }
 
 main {
@@ -49,16 +70,17 @@ main {
     margin-top: 3em;
 }
 
-header {
-    text-align: center;
-    margin: auto 2em;
+#mainLeft {
+    border-right: 1px solid lightgray;
 }
 
-footer {
-    text-align: center;
-    margin: auto 2em;
+#mainRight {}
+
+section {
+    margin: auto 2em 2em 1em;
 }
 
+/* Footer Styles */
 footer .social {
     margin: 24px 0;
     padding: 0;
@@ -80,49 +102,12 @@ footer .social li a:hover {
     color: #FFFFFF;
 }
 
-section {
-    margin: auto 1em 2em 2em;
-}
-
-i {
-    margin-right: .5em;
-}
-
-p {
-    margin: .2em auto
-}
-
-hr {
-    border: none;
-    background-color: lightgray;
-    height: 1px;
-}
-
-h1,
-h2 {
-    font-weight: 100;
-    margin-bottom: 0;
-}
-
-input {
-    text-align: left;
-    width: 20%;
-}
-
-select {
-    text-align: left;
-    width: 20%;
-}
-
-#mainLeft {
-    border-right: 1px solid lightgray;
-}
-
+/* Chat Styles */
 .chat-selection {
     margin: auto;
     width: 90%;
     border-radius: 24px;
-    padding: 0px 32px 32px 32px;
+    padding: 0 32px 32px 32px;
     margin-bottom: 20px;
 }
 
@@ -133,7 +118,7 @@ select {
     border: 1px solid #ccc;
     border-radius: 15px;
     overflow-y: scroll;
-    padding: 20px 20px;
+    padding: 20px;
 }
 
 .chat-window::-webkit-scrollbar {
