--- a/mlgpt2/styles.css
+++ b/mlgpt2/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
-    color: #FFFFFF;
+    color: #fff;
     background-color: #0D0F12;
     max-width: 88%;
     margin: auto;
@@ -68,19 +68,29 @@ main {
     display: grid;
     grid-template-columns: 25% 75%;
     margin-top: 3em;
+    height: calc(100vh - 300px);
 }
 
 #mainLeft {
     border-right: 1px solid lightgray;
+    padding-left: 20%;
 }
 
-#mainRight {}
+#mainRight {
+    height: 100%;
+}
 
 section {
     margin: auto 2em 2em 1em;
 }
 
 /* Footer Styles */
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 88%;
+}
+
 footer .social {
     margin: 24px 0;
     padding: 0;
@@ -99,7 +109,7 @@ footer .social li a {
 }
 
 footer .social li a:hover {
-    color: #FFFFFF;
+    color: #fff;
 }
 
 /* Chat Styles */
@@ -114,7 +124,7 @@ footer .social li a:hover {
 .chat-window {
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 65%;
     border: 1px solid #ccc;
     border-radius: 15px;
     overflow-y: scroll;
@@ -147,14 +157,14 @@ footer .social li a:hover {
     border-radius: 5px;
     border: none;
     background-color: #8ECAE6;
-    color: #333333;
+    color: #333;
     padding: 5px 10px;
     cursor: pointer;
 }
 
 .chat-input button:hover {
     background-color: #80A9D7;
-    color: #333333;
+    color: #333;
 }
 
 .userMessage {
@@ -166,7 +176,7 @@ footer .social li a:hover {
     border-radius: 5px;
     box-sizing: border-box;
     background-color: #80A9D7;
-    color: #333333;
+    color: #333;
     margin-bottom: 10px;
     margin-left: auto;
 }
