--- a/devopsportfolio/styles.css
+++ b/devopsportfolio/styles.css
@@ -1,41 +1,35 @@
+/* Global Styles */
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
+  color: #fff;
+  background-color: #0D1117;
   max-width: 88%;
   margin: auto;
-  color: #FFFFFF;
-  background-color: #0D1117;
 }
 
-a:link {
-  color: #EE6009;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:visited {
-  color: #EE6009;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #EE6009;
-  background-color: transparent;
-  text-decoration: underline;
-}
-
+a:link,
+a:visited,
+a:hover,
 a:active {
   color: #EE6009;
-  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover,
+a:active {
   text-decoration: underline;
+}
+
+h1,
+h2 {
+  margin-bottom: 0;
 }
 
 h1 {
   font-size: 3em;
   letter-spacing: .6em;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding: 1em 0;
 }
 
 h2 {
@@ -43,19 +37,53 @@ h2 {
   padding-bottom: 1em;
 }
 
+hr {
+  border: none;
+  background-color: lightgray;
+  height: 1px;
+}
+
+p {
+  margin: .2em auto;
+  margin-bottom: 10px;
+  color: #a7a7a7;
+}
+
+i {
+  margin-right: .5em;
+}
+
+input,
+select {
+  text-align: left;
+  width: 20%;
+}
+
+/* Layout Styles */
+header,
+footer {
+  text-align: center;
+  margin: auto 2em;
+}
+
 main {
   place-items: center;
   margin-top: 1.5em;
 }
 
-header {
-  text-align: center;
-  margin: auto 2em;
+section {
+  margin: auto;
+  width: 90%;
+  background-color: #161B22;
+  border-radius: 24px;
+  padding: 32px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(255, 255, 255, .08);
 }
 
+/* Footer Styles */
 footer {
-  text-align: center;
-  margin: auto 2em;
+  bottom: 0;
 }
 
 footer .social {
@@ -76,48 +104,5 @@ footer .social li a {
 }
 
 footer .social li a:hover {
-  color: #FFFFFF;
-}
-
-section {
-  margin: auto;
-  width: 90%;
-  background-color: #161B22;
-  border-radius: 24px;
-  padding: 32px;
-  margin-bottom: 20px;
-  border: 1px solid rgba(255, 255, 255, .08);
-}
-
-i {
-  margin-right: .5em;
-}
-
-p {
-  margin: .2em auto;
-  margin-bottom: 10px;
-  color: #a7a7a7;
-
-}
-
-hr {
-  border: none;
-  background-color: lightgray;
-  height: 1px;
-}
-
-h1,
-h2 {
-  font-weight: 100;
-  margin-bottom: 0;
-}
-
-input {
-  text-align: left;
-  width: 20%;
-}
-
-select {
-  text-align: left;
-  width: 20%;
+  color: #fff;
 }
