--- a/mlcoffeeplantdiseases/styles.css
+++ b/mlcoffeeplantdiseases/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
-    color: #fff;
+    color: #FFFFFF;
     background-color: #3D3D3D;
     max-width: 88%;
     margin: auto;
@@ -16,13 +16,14 @@ a:link,
 a:visited,
 a:hover,
 a:active {
-    color: #DDB892;
+    font-weight: bold;
+    color: #FFFFFF;
     text-decoration: none;
 }
 
 a:hover,
 a:active {
-    text-decoration: underline;
+    color: #DDB892;
 }
 
 h1,
@@ -110,9 +111,9 @@ footer .social li {
 }
 
 footer .social li a {
-    color: #fff;
+    color: #FFFFFF
 }
 
 footer .social li a:hover {
-    color: #fff;
+    color: #FFFFFF
 }
