--- a/mlportfolio/styles.css
+++ b/mlportfolio/styles.css
@@ -2,7 +2,7 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
-  color: #fff;
+  color: #FFFFFF;
   background-color: #0D1117;
   max-width: 88%;
   margin: auto;
@@ -12,13 +12,14 @@ a:link,
 a:visited,
 a:hover,
 a:active {
+  font-weight: bold;
   color: #EE6009;
   text-decoration: none;
 }
 
 a:hover,
 a:active {
-  text-decoration: underline;
+  color: #F49D13;
 }
 
 h1,
@@ -100,9 +101,9 @@ footer .social li {
 }
 
 footer .social li a {
-  color: #fff;
+  color: #FFFFFF;
 }
 
 footer .social li a:hover {
-  color: #fff;
+  color: #FFFFFF;
 }
