--- a/mlgpt2/styles.css
+++ b/mlgpt2/styles.css
@@ -6,6 +6,7 @@ body {
     background-color: #0D0F12;
     max-width: 88%;
     margin: auto;
+    overflow: hidden;
 }
 
 a:link,
@@ -71,7 +72,6 @@ main {
     display: grid;
     margin-top: 1.5em;
     grid-template-columns: 25% 75%;
-    height: calc(100vh - 320px);
 }
 
 #mainLeft {
@@ -131,6 +131,7 @@ footer .social li a:hover {
     border-radius: 15px;
     overflow-y: scroll;
     padding: 20px;
+    height: calc(100vh - 420px);
 }
 
 .chat-window::-webkit-scrollbar {
