--- a/mlgpt2/styles.css
+++ b/mlgpt2/styles.css
@@ -132,7 +132,12 @@ footer .social li a:hover {
     overflow-y: scroll;
     padding: 20px;
     height: calc(100vh - 420px);
-    min-height: -webkit-fill-available;
+}
+
+@media (max-width: 767px) {
+    .chat-window {
+        height: calc(100vh - 620px);
+    }
 }
 
 .chat-window::-webkit-scrollbar {
