--- a/mldisastertweets/styles.css
+++ b/mldisastertweets/styles.css
@@ -1,4 +1,8 @@
 /* Global Styles */
+:root {
+    --doc-height: 100%
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
@@ -132,6 +136,7 @@ footer .social li a:hover {
     overflow-y: scroll;
     padding: 20px;
     height: calc(100vh - 470px);
+    height: var(--doc-height);
 }
 
 .chat-window::-webkit-scrollbar {
