--- a/mlsupplychain/styles.css
+++ b/mlsupplychain/styles.css
@@ -1,4 +1,8 @@
 /* Global Styles */
+:root {
+  --doc-height: 100%
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
