--- a/mlcovid/styles.css
+++ b/mlcovid/styles.css
@@ -14,6 +14,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    height: var(--doc-height);
 }
 
 a:link,
