--- a/mldisastertweets/styles.css
+++ b/mldisastertweets/styles.css
@@ -137,7 +137,6 @@ footer .social li a:hover {
     overflow-y: scroll;
     padding: 20px;
     height: calc(100vh - 470px);
-    /* height: var(--doc-height); */
 }
 
 .chat-window::-webkit-scrollbar {
@@ -188,4 +187,10 @@ footer .social li a:hover {
     color: #333;
     margin-bottom: 10px;
     margin-left: auto;
+}
+
+@media (orientation: portrait) {
+    .chat-window {
+        height: calc(100vh - 700px);
+    }
 }
