--- a/mlcenitex/styles.css
+++ b/mlcenitex/styles.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
     color: #FFFFFF;
-    background-color: #0D0F12;
+    background-color: #1E1647;
     max-width: 88%;
     margin: auto;
     overflow: hidden;
@@ -25,7 +25,7 @@ a:active {
 
 a:hover,
 a:active {
-    color: #8ECAE6;
+    color: #1DB2A9;
 }
 
 h1,
@@ -164,26 +164,26 @@ footer .social li a:hover {
     margin-left: 10px;
     border-radius: 5px;
     border: none;
-    background-color: #8ECAE6;
+    background-color: #1DB2A9;
     color: #333;
     padding: 5px 10px;
     cursor: pointer;
 }
 
 .chat-input button:hover {
-    background-color: #80A9D7;
+    background-color: #1791A4;
     color: #333;
 }
 
 .userMessage {
     text-align: left;
     max-width: 500px;
-    border: 1px solid #80A9D7;
+    border: 1px solid #1791A4;
     box-shadow: 0 0 8px rgba(0, 0, 0, .3);
     padding: 5px 10px;
     border-radius: 5px;
     box-sizing: border-box;
-    background-color: #80A9D7;
+    background-color: #1791A4;
     color: #333;
     margin-bottom: 10px;
     margin-left: auto;
