--- a/mlcenitex/styles.css
+++ b/mlcenitex/styles.css
@@ -178,7 +178,7 @@ footer .social li a:hover {
 
 .userMessage {
     text-align: left;
-    max-width: 500px;
+    max-width: 80%;
     border: 1px solid #1791A4;
     box-shadow: 0 0 8px rgba(0, 0, 0, .3);
     padding: 5px 10px;
