--- a/mlgpt2/styles.css
+++ b/mlgpt2/styles.css
@@ -177,7 +177,7 @@ footer .social li a:hover {
 
 .userMessage {
     text-align: left;
-    max-width: 500px;
+    max-width: 80%;
     border: 1px solid #80A9D7;
     box-shadow: 0 0 8px rgba(0, 0, 0, .3);
     padding: 5px 10px;
